--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react-hooks": "2.5.0",
     "expo": "~39.0.2",
     "expo-blur": "~8.2.0",
     "expo-font": "~8.3.0",
@@ -31,6 +38,7 @@
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "eslint": "6.8.0",
     "typescript": "~3.9.5"
   },
   "private": true
