fix: lint issues

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
       "no-use-before-define": "off",
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn",
+      "linebreak-style": [ "error", "windows"],
       "react/jsx-filename-extension": [1, { "extensions": [".tsx", ".ts"] }],
       "import/prefer-default-export": "off",
       "import/extensions": [
@@ -40,5 +41,10 @@
           "tsx": "never"
         }
       ]
+    },
+    "settings": {
+      "import/resolver": {
+        "typescript": {}
+      }
     }
 }
