--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/react-native": "~0.63.2",
     "@types/styled-components": "^5.1.4",
     "eslint": "6.8.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
     "typescript": "~3.9.5"
   },
   "private": true
