--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "name": "xo-games",
+  "productName": "XO Games",
+  "description": "Trabalho da matéria de Desenvolvimento de Sistemas para Dispositivos Móveis, aplicativo para Android contendo mini games",
+  "version": "0.0.2",
+  "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -43,6 +48,5 @@
     "eslint": "6.8.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "typescript": "~3.9.5"
-  },
-  "private": true
+  }
 }
