--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
         "@typescript-eslint"
     ],
     "rules": {
+      "react/prop-types": "off",
       "operator-linebreak": "off",
       "no-use-before-define": "off",
       "react-hooks/rules-of-hooks": "error",
