--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "xo-games",
   "productName": "XO Games",
   "description": "Trabalho da matéria de Desenvolvimento de Sistemas para Dispositivos Móveis, aplicativo para Android contendo mini games",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -29,6 +29,7 @@
     "expo-font": "~8.3.0",
     "expo-linear-gradient": "~8.3.0",
     "expo-status-bar": "~1.0.2",
+    "lottie-react-native": "^3.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
